--- a/WiredBrainCoffeeAdmin/Pages/Index.cshtml
+++ b/WiredBrainCoffeeAdmin/Pages/Index.cshtml
@@ -9,6 +9,17 @@
     <hr />
     <div class="row">
         <div class="col-md-6">
+            <h2>Latest Survey Results</h2>
+            <table class="table tableprogress-bar-striped table-bordered">
+                @foreach(var item in Model.SurveyResults){
+                    <tr>
+                        <td>@item.Question</td>
+                        <td>@item.Answer</td>
+                    </tr>
+                }
+            </table>
+        </div>
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
                    The Basics
