--- a/WiredBrainCoffeeAdmin/Pages/Products/ViewAllProducts.cshtml
+++ b/WiredBrainCoffeeAdmin/Pages/Products/ViewAllProducts.cshtml
@@ -1,5 +1,9 @@
-﻿@page
+﻿@page "/products/all"
 @model WiredBrainCoffeeAdmin.Pages.Products.ViewAllProductsModel
 @{
 }
 <h1>View all products</h1>
+
+@section RightFooter{
+    <img src="~/images/menu/strawberries.png" />
+}
